# meeting-transcriber

./: .env.example  .gitignore  compose.yaml  entrypoint.sh  skills-lock.json
.claude/: settings.json
.codex/: config.toml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a7c1cdb3ce41_v001_initial_schema_with_all_10_tables.py
backend/app/: auth.py  config.py  database.py  main.py  session_manager.py  summarizer.py
backend/src/: config.py  main.py
backend/src/agents/discovery/: __init__.py  contact_extractor.py  exporter_finder.py  miner_finder.py
backend/src/agents/outreach/: __init__.py  outreach_agent.py
backend/src/agents/verification/: __init__.py  duplicate_resolver.py  entity_verifier.py  source_quality_verifier.py
backend/src/api/: country_jobs.py  leads.py  metrics.py
backend/src/db/: base.py
backend/src/models/: country_job.py  skill_log.py
backend/src/skills/discovery/: contact_extraction.py
backend/src/skills/gws/: email_sender.py  sheet_reader.py  sheet_writer.py
backend/src/skills/knowledge/: knowledge_seeder.py
backend/src/skills/normalization/: normalize.py
backend/src/skills/output/: xlsx_writer.py
backend/src/skills/signalhire/: search.py
backend/src/skills/verification/: __init__.py  verify_contact.py
backend/src/tools/: __init__.py  gws_tools.py  verification_tools.py
backend/src/utils/: rate_limiter.py  retry.py
backend/src/workflows/steps/: __init__.py  approval_wait.py  discovery_fanout.py  draft_generation.py  intake.py  lead_persistence.py  normalization.py  signalhire_enrichment.py  verification_fanout.py
backend/tests/: conftest.py
backend/tests/evals/golden/: ghana.json
backend/tests/unit/: test_retry.py  test_token_tracker.py
docker/: docker-compose.test.yml  docker-compose.yml  init-db.sh
frontend/: .gitignore  (+4 more)
meeting-transcriber/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
meeting-transcriber/backend/alembic/versions/: 0001_initial_schema.py
meeting-transcriber/backend/app/: auth.py  config.py  database.py  deepgram_streaming.py  main.py  models.py  models_db.py  session_manager.py  slack_client.py  summarizer.py  transcribe_file.py
voice-update-bot/: .env.example  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
voice-update-bot/app/: config.py  formatter.py  handler.py  main.py  slack_client.py  transcriber.py
(+188 files in other folders)
