[project]
name = "gold-lead-system"
version = "0.1.0"
description = "Gold Lead Research, Verification, and Outreach System"
requires-python = ">=3.12"
dependencies = [
    "agno",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx",
    "openrouter",
    "openai>=2.30.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "factory-boy>=3.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
